Favicon and README updates.

--- a/website-frontend/index.html
+++ b/website-frontend/index.html
@@ -8,6 +8,16 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/2.6.6/jquery.fullPage.css"
     />
     <link rel="stylesheet" href="css/style.css" />
+    <!-- Favicons and page icons as per https://realfavicongenerator.net/ -->
+    <link rel="apple-touch-icon" sizes="180x180" href="/icons/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/icons/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/icons/favicon-16x16.png">
+    <link rel="manifest" href="/icons/site.webmanifest">
+    <link rel="mask-icon" href="/icons/safari-pinned-tab.svg" color="#5bbad5">
+    <link rel="shortcut icon" href="/icons/favicon.ico">
+    <meta name="msapplication-TileColor" content="#da532c">
+    <meta name="msapplication-config" content="/icons/browserconfig.xml">
+    <meta name="theme-color" content="#ffffff">
   </head>
   <body>
     <header>
@@ -30,13 +40,13 @@
           </li>
           <li data-menuanchor="thirdSection">
             <a href="#thirdSection" title="Third Section"
-              >Climate change and food insececurity</a
+              >Climate change and food insecurity</a
             >
           </li>
           <li data-menuanchor="fourthSection">
             <a href="#fourthSection" title="Fourth Section"
               >median lines on globe for normal wine production - perhaps on
-              tradional wine producing map?</a
+              traditional wine producing map?</a
             >
           </li>
           <li data-menuanchor="fifthSection">
