--- a/website-frontend/index.html
+++ b/website-frontend/index.html
@@ -320,12 +320,20 @@
 
       <!-- EIGHTH PAGE 1: PRECIPITATION -->
 
-      <section class="vertical-scrolling">
+       <section class="vertical-scrolling">
         <div class="section-container">
           <div class="section-graphics">
             <iframe
-              class="map"
+              class="graph-rain"
               src="maps/Slide_7_Climate_Plots/Rain/index.html"
+            ></iframe>
+              <iframe
+              class="graph-temp"
+              src="maps/Slide_7_Climate_Plots/temp/index.html"
+            ></iframe>
+                <iframe
+              class="graph-sun"
+              src="maps/Slide_7_Climate_Plots/sun/index.html"
             ></iframe>
             <p class="paragraph-describtion">
               Data From: <a href= "https://www.metoffice.gov.uk/research/climate/maps-and-data/uk-and-regional-series
