--- a/website-frontend/index.html
+++ b/website-frontend/index.html
@@ -299,20 +299,7 @@
             <h3>County Trends</h3>
             <p class="paragraph-main">
               As shown, the South-East region of England hosts the majority of
-              Vineyards. To create a successful vineyard, grapes need an
-              environment full of sun, warmth, and moisture. When comparing the
-              difference between annual average measurements in three climate
-              factors (precipitation, sunshine, and temperature) from the year
-              1836 between the South-East of England, to the entire United
-              Kingdom, a distinction is continuous and increasing. The
-              South-East region has a warmer environment, with more sun. This
-              has also increased throughout the 185 years shown, creating an
-              ideal environment for grapes. However, the precipitation level is
-              also consistently lower. This may present as a limiting factor in
-              the success of Viticulture in the region. Yet, in actuality,
-              grapes thrive in dryer climates, such as those found within
-              Southern Europe. What delaminates a successful vineyard, and also
-              the taste of the grapes lies beneath the surface.
+              Vineyards. 
             </p>
           </div>
         </div>
@@ -338,11 +325,24 @@
             
           </div>
           <div class="section-text">
-            <h2>Precipitation</h2>
+            <h2>The Climate of the South East</h2>
             <h3> </h3>
             <p class="paragraph-main">
-              Line graph showing mean annual precipitation levels for South-East
-              England and UK. Data from the Met Office.
+              Each of these graphs compare annual preciptation, sunshine 
+              and temperature between the South East, and the entire UK. To 
+              create a successful vineyard, grapes need a warm environment, basked in sunshine.
+              When comparing the
+              difference between annual average measurements in the three climate
+              factors, a clear distinction is present, and increasing. The
+              South-East region has a warmer environment, with more sunshine too. These differences have exacerbated throughout the 185 years, 
+              exemplifying how climate change is altering weather patterns within some localities. Thus, the ideal environment for grape production is now undoubtedly 
+              situated within the South East of England. <br> However, precipitation levels within the South East are consistently lower then that of the United Kingdom
+              . This may present as a limiting factor in
+              the success of Viticulture. Yet, in actuality,
+              grapes thrive in dryer climates, such as those found within
+              the traditional regions of Viticulture, within Southern Europe.<br>
+              Ultimately, what delaminates a successful vineyard, and also
+              the taste of the grapes, lies beneath the surface.
             </p>
           </div>
         </div>
