--- a/website-frontend/index.html
+++ b/website-frontend/index.html
@@ -112,6 +112,8 @@
                 <!-- text left-->
                 <div class="col s10">
                   <p>A data visulisation website by Group 5 CASA0003</p>
+                    <button id="btn", onclick="toggle()"></button>
+
                 </div>
               </div>
             </div>
