--- a/website-frontend/index.html
+++ b/website-frontend/index.html
@@ -112,7 +112,7 @@
                 <!-- text left-->
                 <div class="col s10">
                   <p>A data visulisation website by Group 5 CASA0003</p>
-                    <button id="btn", onclick="toggle()"></button>
+                   <br> <button id="btn", onclick="toggle()">Click to go Fullscreen</button>
 
                 </div>
               </div>
