--- a/website-frontend/index.html
+++ b/website-frontend/index.html
@@ -111,7 +111,7 @@
               <div id="body1" class="row">
                 <!-- text left-->
                 <div class="col s10">
-                  <p>A data visulisation website by Group 5 CASA0003</p>
+                  <p>A data visualisation website by Group 5 CASA0003</p>
                    <br><button id="btn", onclick="toggle()">Click to go Fullscreen</button>
 
                 </div>
