Refresh after Ruby's website restructure

--- a/website-frontend/index.html
+++ b/website-frontend/index.html
@@ -112,7 +112,7 @@
                 <!-- text left-->
                 <div class="col s10">
                   <p>A data visualisation website by Group 5 CASA0003</p>
-                   <br><button id="btn", onclick="toggle()">Click to go Fullscreen</button>
+                   <br> <button id="btn", onclick="toggle()">Click to go Fullscreen</button>
 
                 </div>
               </div>
@@ -214,7 +214,7 @@
       <section class="vertical-scrolling">
         <div class="section-container">
           <div class="section-graphics">
-            <iframe class="map" src="maps/EUvineyards.html"></iframe>
+            <iframe class="map" src="https://agelanyi.github.io/climate-and-uk-wine/04-Europe-Vineyards/04-Europe-Vineyards.html"></iframe>
             <p class="paragraph-describtion">
               Map of Vineyards landuse in Europe (Copernicus Global Land Service, 2000)
             </p>
@@ -268,7 +268,7 @@
         <div class="fullpage-graphics">
           <iframe
             class="map"
-            src="maps/Slide_6_Vineyard_Locations.html"
+            src="https://agelanyi.github.io/climate-and-uk-wine/06-UK-Vineyard-Locations/06-UK-Vineyard-Locations.html"
           ></iframe>
           <p class="paragraph-describtion">UK Vineyard Locations. Data: <a href= "https://www.winegb.co.uk/trade/industry-data-and-stats-2/)">https://www.winegb.co.uk/trade/industry-data-and-stats-2/</a></p>
         </div>
@@ -292,7 +292,7 @@
           <div class="section-graphics">
             <iframe
               class="map"
-              src="maps/Slide_7_Counties_and_Climate.html"
+              src="https://agelanyi.github.io/climate-and-uk-wine/07-UK-Vineyard-Regions/07-UK-Vineyard-Regions.html"
             ></iframe>
             <p class="paragraph-describtion">Data from: <a href="https://www.winegb.co.uk/">WineGB UK (2022)</a></p>
           </div>
@@ -314,15 +314,15 @@
           <div class="section-graphics">
             <iframe
               class="graph-rain"
-              src="maps/Slide_7_Climate_Plots/Rain/index.html"
+              src="https://agelanyi.github.io/climate-and-uk-wine/08-UK-Regions-Weather/08-UK-Regions-Weather/Rain/index.html"
             ></iframe>
               <iframe
               class="graph-temp"
-              src="maps/Slide_7_Climate_Plots/Temp/index.html"
+              src="https://agelanyi.github.io/climate-and-uk-wine/08-UK-Regions-Weather/08-UK-Regions-Weather/Temp/index.html"
             ></iframe>
                 <iframe
               class="graph-sun"
-              src="maps/Slide_7_Climate_Plots/Sun/index.html"
+              src="https://agelanyi.github.io/climate-and-uk-wine/08-UK-Regions-Weather/08-UK-Regions-Weather/Sun/index.html"
             ></iframe>
             
           </div>
@@ -338,64 +338,14 @@
               factors, a clear distinction is present, and increasing. The
               South-East region has a warmer environment, with more sunshine too. These differences have exacerbated throughout the 185 years, 
               exemplifying how climate change is altering weather patterns within some localities. Thus, the ideal environment for grape production is now undoubtedly 
-              situated within the South East of England. <br> However, precipitation levels within the South East are consistently lower then that of the United Kingdom
+              situated within the South East of England. <br><br>
+              However, precipitation levels within the South East are consistently lower then that of the United Kingdom
               . This may present as a limiting factor in
               the success of Viticulture. Yet, in actuality,
               grapes thrive in dryer climates, such as those found within
-              the traditional regions of Viticulture, within Southern Europe.<br>
+              the traditional regions of Viticulture, within Southern Europe.<br><br>
               Ultimately, what delaminates a successful vineyard, and also
               the taste of the grapes, lies beneath the surface.
-            </p>
-          </div>
-        </div>
-      </section>
-
-      <!-- EIGHTH PAGE 2: SUN -->
-
-      <section class="vertical-scrolling">
-        <div class="section-container">
-          <div class="section-graphics">
-            <iframe
-              class="map"
-              src="maps/Slide_7_Climate_Plots/Sun/index.html"
-            ></iframe>
-            <p class="paragraph-describtion">
-                Data From: <a href= "https://www.metoffice.gov.uk/research/climate/maps-and-data/uk-and-regional-series
-                ">https://www.metoffice.gov.uk/research/climate/maps-and-data/uk-and-regional-series
-                </a>
-            </p>
-          </div>
-          <div class="section-text">
-            <h2>Sun</h2>
-            <h3> </h3>
-            <p class="paragraph-main">
-              Line graph showing the annual mean sunshine levels for South-East
-              England and UK. Data from the Met Office.
-            </p>
-          </div>
-        </div>
-      </section>
-
-      <!-- EIGHTH PAGE 3: TEMP -->
-
-      <section class="vertical-scrolling">
-        <div class="section-container">
-          <div class="section-graphics">
-            <iframe
-              class="map"
-              src="maps/Slide_7_Climate_Plots/Temp/index.html"
-            ></iframe>
-            <p class="paragraph-describtion">
-                Data From: <a href= "https://www.metoffice.gov.uk/research/climate/maps-and-data/uk-and-regional-series">https://www.metoffice.gov.uk/research/climate/maps-and-data/uk-and-regional-series
-                </a>
-            </p>
-          </div>
-          <div class="section-text">
-            <h2>Temperature</h2>
-            <h3> </h3>
-            <p class="paragraph-main">
-              Line graph showing the annual mean temperature levels for
-              South-East England and UK. Data from the Met Office.
             </p>
           </div>
         </div>
@@ -406,7 +356,7 @@
       <section class="vertical-scrolling">
         <div class="section-container">
           <div class="section-graphics">
-            <iframe class="map" src="maps/Slide_8_Case_Study.html"></iframe>
+            <iframe class="map" src="https://agelanyi.github.io/climate-and-uk-wine/09-UK-Vineyards-Case-Study/09-UK-Vineyards-Case-Study.html"></iframe>
             <p class="paragraph-describtion">
               Case Study Map. Data from: British Geological Survey
             </p>
@@ -442,7 +392,7 @@
       <section class="vertical-scrolling">
         <div class="section-container">
           <div class="section-graphics">
-            <iframe class="map" src="maps/Slide_9_Napa_Valley.html"></iframe>
+            <iframe class="map" src="https://agelanyi.github.io/climate-and-uk-wine/10-Napa-Valley/10-Napa-Valley.html"></iframe>
             <p class="paragraph-describtion">
               Map showing Napa Valley fire on 10/10/2017. Source: The University of Texas (2017)
             </p>
