--- a/website-frontend/index.html
+++ b/website-frontend/index.html
@@ -138,7 +138,7 @@
               From Pinot Noir to a new class of English sparkling wine,
               vineyards throughout the UK are shifting the long-considered
               status quo for Viticulture. Throughout this website, the
-              untold story of the UK’s viticulture is explored. From weather
+              untold story of the UK's viticulture is explored. From weather
               patterns, to what lies beneath the grapes, you can discover how a
               global phenomenon is creating a new kind of locality.
             </p>
@@ -216,7 +216,7 @@
           <div class="section-graphics">
             <iframe class="map" src="https://agelanyi.github.io/climate-and-uk-wine/04-Europe-Vineyards/04-Europe-Vineyards.html"></iframe>
             <p class="paragraph-describtion">
-              Map of Vineyards landuse in Europe (Copernicus Global Land Service, 2000)
+              Map of Vineyards land use in Europe (Copernicus Global Land Service, 2000)
             </p>
           </div>
           <div class="section-text">
@@ -403,7 +403,7 @@
             <p class="paragraph-main">
               Whilst climate change has produced a new opportunity for
               Viticulture in the UK, it would be negligible to exclude how other
-              Viticulture’s have been adversely impacted. Within Napa Valley, a
+              Viticulture's have been adversely impacted. Within Napa Valley, a
               region in California, wildfires commonly occur. The specific event
               shown, upon the 10th of October 2017, displays both the smoke from
               the event, but, more importantly, the damage. With the
@@ -451,7 +451,7 @@
             <h2>About</h2>
             <h3>Team</h3>
               <p class="paragraph-main">
-                Andras Gelayi<br/>
+                Andras Gelanyi<br/>
                 Ruby Johnson<br/>
                 Kamelya Staneva<br/>
                 Haofu Wang<br/>
