--- a/website-frontend/index.html
+++ b/website-frontend/index.html
@@ -170,7 +170,7 @@
           <iframe
             frameborder="0"
             class="map"
-            src="https://agelanyi.github.io/climate-and-uk-wine/02-Global-Viticultural-Climate-Zones/02-Global-Viticultural-Climate-Zones.html"
+            src="/02-Global-Viticultural-Climate-Zones/02-Global-Viticultural-Climate-Zones.html"
           ></iframe>
           <p class="paragraph-describtion">Global Viticulture Climate Zones</p>
         </div>
@@ -186,7 +186,7 @@
             <iframe
               frameborder="0"
               class="map"
-              src="https://agelanyi.github.io/climate-and-uk-wine/03-UK-Climate-Change/03-UK-climate-temp-rainfall.html"
+              src="/03-UK-Climate-Change/03-UK-climate-temp-rainfall.html"
             ></iframe>
 
             <p class="paragraph-describtion">Data source: <a href="https://www.metoffice.gov.uk/research/climate/maps-and-data/uk-and-regional-series">UK MET Office (2022)</a></p>
@@ -214,7 +214,7 @@
       <section class="vertical-scrolling">
         <div class="section-container">
           <div class="section-graphics">
-            <iframe class="map" src="https://agelanyi.github.io/climate-and-uk-wine/04-Europe-Vineyards/04-Europe-Vineyards.html"></iframe>
+            <iframe class="map" src="/04-Europe-Vineyards/04-Europe-Vineyards.html"></iframe>
             <p class="paragraph-describtion">
               Map of Vineyards land use in Europe (Copernicus Global Land Service, 2000)
             </p>
@@ -240,7 +240,7 @@
             <iframe
               frameborder="0"
               class="map"
-              src="https://agelanyi.github.io/climate-and-uk-wine/05-UK-Vineyard-Graphs/Dropdown_4.html"
+              src="/05-UK-Vineyard-Graphs/Dropdown_4.html"
             ></iframe>
             <p class="paragraph-describtion">
               The Profile of Wine Exports (Data:
@@ -268,7 +268,7 @@
         <div class="fullpage-graphics">
           <iframe
             class="map"
-            src="https://agelanyi.github.io/climate-and-uk-wine/06-UK-Vineyard-Locations/06-UK-Vineyard-Locations.html"
+            src="/06-UK-Vineyard-Locations/06-UK-Vineyard-Locations.html"
           ></iframe>
           <p class="paragraph-describtion">UK Vineyard Locations. Data: <a href= "https://www.winegb.co.uk/trade/industry-data-and-stats-2/)">https://www.winegb.co.uk/trade/industry-data-and-stats-2/</a></p>
         </div>
@@ -292,7 +292,7 @@
           <div class="section-graphics">
             <iframe
               class="map"
-              src="https://agelanyi.github.io/climate-and-uk-wine/07-UK-Vineyard-Regions/07-UK-Vineyard-Regions.html"
+              src="/07-UK-Vineyard-Regions/07-UK-Vineyard-Regions.html"
             ></iframe>
             <p class="paragraph-describtion">Data from: <a href="https://www.winegb.co.uk/">WineGB UK (2022)</a></p>
           </div>
@@ -314,15 +314,15 @@
           <div class="section-graphics">
             <iframe
               class="graph-rain"
-              src="https://agelanyi.github.io/climate-and-uk-wine/08-UK-Regions-Weather/08-UK-Regions-Weather/Rain/index.html"
+              src="/08-UK-Regions-Weather/08-UK-Regions-Weather/Rain/index.html"
             ></iframe>
               <iframe
               class="graph-temp"
-              src="https://agelanyi.github.io/climate-and-uk-wine/08-UK-Regions-Weather/08-UK-Regions-Weather/Temp/index.html"
+              src="/08-UK-Regions-Weather/08-UK-Regions-Weather/Temp/index.html"
             ></iframe>
                 <iframe
               class="graph-sun"
-              src="https://agelanyi.github.io/climate-and-uk-wine/08-UK-Regions-Weather/08-UK-Regions-Weather/Sun/index.html"
+              src="/08-UK-Regions-Weather/08-UK-Regions-Weather/Sun/index.html"
             ></iframe>
             
           </div>
@@ -356,7 +356,7 @@
       <section class="vertical-scrolling">
         <div class="section-container">
           <div class="section-graphics">
-            <iframe class="map" src="https://agelanyi.github.io/climate-and-uk-wine/09-UK-Vineyards-Case-Study/09-UK-Vineyards-Case-Study.html"></iframe>
+            <iframe class="map" src="/09-UK-Vineyards-Case-Study/09-UK-Vineyards-Case-Study.html"></iframe>
             <p class="paragraph-describtion">
               Case Study Map. Data from: British Geological Survey
             </p>
@@ -392,7 +392,7 @@
       <section class="vertical-scrolling">
         <div class="section-container">
           <div class="section-graphics">
-            <iframe class="map" src="https://agelanyi.github.io/climate-and-uk-wine/10-Napa-Valley/10-Napa-Valley.html"></iframe>
+            <iframe class="map" src="/10-Napa-Valley/10-Napa-Valley.html"></iframe>
             <p class="paragraph-describtion">
               Map showing Napa Valley fire on 10/10/2017. Source: The University of Texas (2017)
             </p>
