Fixing typos in code

--- a/website-frontend/index.html
+++ b/website-frontend/index.html
@@ -105,15 +105,14 @@
             <div class="section-text">
               <h3>A Change in Climate, A Change in Taste</h3>
               <div class="landing-subheading">
-                INTRODUCTION TO THE VISULISATION - ABOUT CLIMATE CHANGE, AND HOW
+                INTRODUCTION TO THE VISUALISATION - ABOUT CLIMATE CHANGE, AND HOW
                 IT CAN CHANGE FOOD
               </div>
               <div id="body1" class="row">
                 <!-- text left-->
                 <div class="col s10">
                   <p>A data visualisation website by Group 5 CASA0003</p>
-                   <br> <button id="btn", onclick="toggle()">Click to go Fullscreen</button>
-
+                   <br> <button id="btn" onclick="toggle()">Click to go Fullscreen</button>
                 </div>
               </div>
             </div>
@@ -330,7 +329,7 @@
             <h2>The Climate of the South East</h2>
             <h3> </h3>
             <p class="paragraph-main">
-              Each of these graphs compare annual preciptation, sunshine 
+              Each of these graphs compare annual precipitation, sunshine 
               and temperature between the South East, and the entire UK. To 
               create a successful vineyard, grapes need a warm environment, basked in sunshine.
               When comparing the
