--- a/03-UK-Climate-Change/03-UK-climate-temp-rainfall.html
+++ b/03-UK-Climate-Change/03-UK-climate-temp-rainfall.html
@@ -4,8 +4,8 @@
 <head>
   <meta charset="utf-8" />
   <title>UK Climate, Temperature and Rainfall</title>
-  <!-- Include the ECharts file you just downloaded -->
-  <script src="echarts.js"></script>
+  <!-- Include the ECharts library -->
+  <script src="../00-Libraries/echarts.js"></script>
 </head>
 
 <body>
