--- a/website-frontend/index.html
+++ b/website-frontend/index.html
@@ -62,8 +62,8 @@
           <li data-menuanchor="seventhSection">
             <a href="#sevenSection" title="Seventh section"></a>
           </li>
-          <li data-menuanchor="eigthSection">
-            <a href="#eigthSection" title="Eigth Section"></a>
+          <li data-menuanchor="eighthSection">
+            <a href="#eighthSection" title="Eighth Section"></a>
           </li>
           <li data-menuanchor="ninthSection">
             <a href="#ninthSection" title="Ninth Section">One vineyard</a>
@@ -239,7 +239,7 @@
             <iframe
               frameborder="0"
               class="map"
-              src="../05-UK-Vineyard-Graphs/Dropdown_4.html"
+              src="../05-UK-Vineyard-Graphs/05-UK-Vineyard-Graphs.html"
             ></iframe>
             <p class="paragraph-describtion">
               The Profile of Wine Exports (Data:
