--- a/07-UK-Vineyard-Regions/07-UK-Vineyard-Regions.html
+++ b/07-UK-Vineyard-Regions/07-UK-Vineyard-Regions.html
@@ -223,10 +223,13 @@ width: 10px;
     position: absolute;
     top: 0%;
     margin: 10px;
-    height: 10%; 
-    width: 15%;
+    height: 15%;
+    width: 25%;
     opacity: 0.8;
-    background-color: white}
+    background-color: white;
+    padding: 5px 5px;
+  }
+
 .session {
     margin-bottom: 20px;
       
@@ -236,15 +239,12 @@ width: 10px;
     position: absolute;
     top: 20%;
     margin: 10px;
-    height: 15%; 
-    width: 15%;
+    height: 20%; 
+    width: 25%;
     opacity: 0.8;
     background-color: white;
-    padding: 10px 20px  }
-.session {
-    margin-bottom: 20px;
-      
-  }
+    padding: 5px 5px;
+   }
 
 #graph1 {
     position: absolute;
