--- a/08-UK-Regions-Weather/Rain/index.html
+++ b/08-UK-Regions-Weather/Rain/index.html
@@ -23,7 +23,7 @@
     <body>
 
     <div>
-      <canvas id="chart-container" style="height: 330px; width: 100%"></canvas>
+      <canvas id="chart-container" style="height: 90vh; width: 100%"></canvas>
     </div>
     
     <script src="script.js"></script>
