--- a/website-frontend/index.html
+++ b/website-frontend/index.html
@@ -104,7 +104,7 @@
               <!-- text left-->
               <div class="col s10">
                 <p>A data visualisation website by Group 5 CASA0003</p>
-                <br> <button id="btn" onclick="toggle()">Click to go Fullscreen</button>
+                <br> <button id="btn" onclick="toggle()">Click to Go Fullscreen</button>
               </div>
             </div>
           </div>
